--- a/index.html
+++ b/index.html
@@ -1,168 +1,113 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>4xSUKOON</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Share Tech Mono', monospace;
-      background: radial-gradient(ellipse at center, #0f0f0f 0%, #000000 100%);
-      color: #00ff99;
-      overflow-x: hidden;
-    }body::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-image: linear-gradient(to right, rgba(255,255,255,0.03) 1px, transparent 1px),
-                    linear-gradient(to bottom, rgba(255,255,255,0.03) 1px, transparent 1px);
-  background-size: 20px 20px;
-  z-index: -1;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>0xAyu - Ethical Hacker Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Share Tech Mono', monospace;
+            background: radial-gradient(ellipse at center, #0f0f0f 0%, #000000 100%);
+            color: #00ff99;
+            overflow-x: hidden;
+        }
 
-.glitch-text {
-  position: relative;
-  animation: glitch 1s infinite;
-  text-shadow: 2px 2px 0 #0ff, -2px -2px 0 #f0f;
-}
+        body::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background-image: linear-gradient(to right, rgba(255,255,255,0.03) 1px, transparent 1px),
+                              linear-gradient(to bottom, rgba(255,255,255,0.03) 1px, transparent 1px);
+            background-size: 20px 20px;
+            z-index: -1;
+        }
 
-@keyframes glitch {
-  0% { transform: translate(0); }
-  20% { transform: translate(-2px, 2px); }
-  40% { transform: translate(-2px, -2px); }
-  60% { transform: translate(2px, 2px); }
-  80% { transform: translate(2px, -2px); }
-  100% { transform: translate(0); }
-}
+        .glitch-text {
+            position: relative;
+            animation: glitch 1s infinite;
+            text-shadow:
+                2px 2px 0 #0ff,
+                -2px -2px 0 #f0f;
+        }
 
-@keyframes flicker {
-  0%, 100% { opacity: 1; }
-  50% { opacity: 0.6; }
-}
+        @keyframes glitch {
+            0% { transform: translate(0); }
+            20% { transform: translate(-2px, 2px); }
+            40% { transform: translate(-2px, -2px); }
+            60% { transform: translate(2px, 2px); }
+            80% { transform: translate(2px, -2px); }
+            100% { transform: translate(0); }
+        }
 
-.flicker {
-  animation: flicker 1.5s infinite;
-}
-
-.float-anim {
-  animation: floatUpDown 4s ease-in-out infinite;
-}
-
-@keyframes floatUpDown {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-12px); }
-}
-
-.matrix {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  z-index: -2;
-  pointer-events: none;
-  opacity: 0.05;
-  animation: scrollMatrix 20s linear infinite;
-}
-
-@keyframes scrollMatrix {
-  from { background-position: 0 0; }
-  to { background-position: 0 1000px; }
-}
-
-.notification {
-  background: rgba(0,255,0,0.05);
-  border: 1px solid #00ff99;
-  border-radius: 0.5rem;
-  padding: 0.75rem;
-  margin-top: 1rem;
-  animation: pulse 2s infinite;
-}
-
-@keyframes pulse {
-  0% { transform: scale(1); opacity: 1; }
-  50% { transform: scale(1.02); opacity: 0.7; }
-  100% { transform: scale(1); opacity: 1; }
-}
-
-  </style>
+        #loader {
+            font-family: 'Share Tech Mono', monospace;
+        }
+    </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-6 relative">
-  <!-- Matrix Rain BG Placeholder -->
-  <div class="matrix" style="background-image: url('https://media.giphy.com/media/xT0xeJpnrWC4XWblEk/giphy.gif'); background-size: cover;"></div>  <!-- Loader -->  <div class="fixed inset-0 bg-black flex items-center justify-center text-green-400 text-xl z-50" id="loader">
-    <span id="typewriter">initializing...</span>
-  </div>  <main class="bg-black bg-opacity-30 border border-green-400 p-8 rounded-xl shadow-2xl w-full max-w-md text-center relative z-10 animate-fade-in">
-    <div class="mb-6 float-anim">
-      <img src="https://raw.githubusercontent.com/RARExSIGMA2025/Insta/main/pfp.jpg" alt="Profile" class="w-32 h-32 mx-auto rounded-full border-4 border-green-400 mb-4 shadow-lg hover:scale-105 transform transition duration-300 rotate-3 hover:rotate-0" />
-      <h1 class="text-3xl glitch-text">4xSUKOON</h1>
-      <p class="text-sm mt-2 flicker">:: access level: undefined ::</p>
-    </div><div class="text-left bg-green-800 bg-opacity-10 p-4 rounded mb-6 text-sm animate-pulse">
-  <p>&gt; status:</p>
-  <p class="ml-4">🟢 System Active | Tracking anomalies | Connected to deep channels</p>
-  <p class="mt-2">&gt; description:</p>
-  <p class="ml-4">undefined entity. precision-driven. coded in silence.</p>
-</div>
+    <!-- Loader -->
+    <div class="fixed inset-0 bg-black flex items-center justify-center text-green-400 text-xl z-50" id="loader">
+        <span id="typewriter">initializing...</span>
+    </div>
 
-<div class="space-y-4" id="links">
-  <a href="https://www.instagram.com/4xsukoon?igsh=bnFqejg2MnhlMmUx" target="_blank" class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all hover:scale-105 transform duration-300">
-    📷 Instagram
-  </a>
-</div>
+    <main class="bg-black bg-opacity-30 border border-green-400 p-8 rounded-xl shadow-lg w-full max-w-md text-center relative z-10">
+        <div class="mb-6">
+            <img src="https://raw.githubusercontent.com/RARExSIGMA2025/Insta/main/pfp.jpg" 
+                 alt="Profile" 
+                 class="w-32 h-32 mx-auto rounded-full border-4 border-green-400 mb-4">
+            <h1 class="text-3xl glitch-text">0xAyu</h1>
+            <p class="text-sm mt-2">Ethical Hacker | Digital Nomad | Cyber Explorer</p>
+        </div>
 
-<div class="notification text-green-300 text-xs">
-  ⚠️ Surveillance active: your presence is being traced.<br/>
-  🔒 You are not alone.
-</div>
+        <div class="text-left bg-green-800 bg-opacity-10 p-4 rounded mb-6 text-sm">
+            <p>$ whoami</p>
+            <p class="ml-4">Ayu - seeker of bugs, protector of bytes.</p>
+            <p class="mt-2">$ mission</p>
+            <p class="ml-4">Defend the web. Build ethical code. Disappear in the shadows.</p>
+        </div>
 
-<footer class="mt-6 text-xs text-green-600">
-  <p>Last Trace: <span id="lastAccess"></span></p>
-  <p>&copy; 2025 4xSUKOON. signal encrypted.</p>
-</footer>
+        <div class="space-y-4">
+            <a href="https://www.instagram.com/4xsukoon?igsh=bnFqejg2MnhlMmUx" target="_blank"
+               class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
+                📷 Instagram
+            </a>
+            <a href="#" class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
+                💻 GitHub
+            </a>
+            <a href="#" class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
+                👨‍💻 Projects
+            </a>
+            <a href="#" class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
+                📄 Resume
+            </a>
+        </div>
 
-  </main>  <script>
-    const loader = document.getElementById("loader");
-    const text = ">> launching instance: 4xSUKOON...";
-    let i = 0;
-    const typewriter = document.getElementById("typewriter");
+        <footer class="mt-6 text-xs text-green-600">
+            <p>Last Access: <span id="lastAccess"></span></p>
+            <p>&copy; 2025 0xAyu. All rights reserved.</p>
+        </footer>
+    </main>
 
-    function type() {
-      if (i < text.length) {
-        typewriter.innerHTML += text.charAt(i);
-        i++;
-        setTimeout(type, 50);
-      } else {
-        setTimeout(() => loader.style.display = "none", 1000);
-      }
-    }
-    window.onload = type;
+    <script>
+        const loader = document.getElementById("loader");
+        const text = ">> Welcome, 0xAyu_Initializing Portfolio...";
+        let i = 0;
+        const typewriter = document.getElementById("typewriter");
 
-    document.getElementById("lastAccess").innerText = new Date().toLocaleString();
+        function type() {
+            if (i < text.length) {
+                typewriter.innerHTML += text.charAt(i);
+                i++;
+                setTimeout(type, 50);
+            } else {
+                setTimeout(() => loader.style.display = "none", 1000);
+            }
+        }
+        window.onload = type;
 
-    const profiles = {
-      github: '',
-      linkedin: '',
-      resume: '',
-      projects: ''
-    };
-
-    const linksContainer = document.getElementById("links");
-    Object.entries(profiles).forEach(([key, url]) => {
-      if (url) {
-        const labelMap = {
-          github: '💻 GitHub',
-          linkedin: '🔗 LinkedIn',
-          resume: '📄 Resume',
-          projects: '👨‍💻 Projects'
-        };
-        const a = document.createElement("a");
-        a.href = url;
-        a.target = "_blank";
-        a.className = "block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all hover:scale-105 transform duration-300";
-        a.innerText = labelMap[key];
-        linksContainer.appendChild(a);
-      }
-    });
-  </script></body>
+        document.getElementById("lastAccess").innerText = new Date().toLocaleString();
+    </script>
+</body>
 </html>
