--- a/index.html
+++ b/index.html
@@ -1,113 +1,145 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0xAyu - Ethical Hacker Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Share Tech Mono', monospace;
-            background: radial-gradient(ellipse at center, #0f0f0f 0%, #000000 100%);
-            color: #00ff99;
-            overflow-x: hidden;
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>4xSUKOON</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Share Tech Mono', monospace;
+      background: black;
+      color: #00ff99;
+      overflow: hidden;
+    }
+    .matrix {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: black;
+      z-index: -1;
+    }
+    canvas {
+      display: block;
+    }
+    .crt {
+      position: relative;
+    }
+    .crt::after {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(0, 255, 153, 0.05),
+        rgba(0, 255, 153, 0.05) 1px,
+        transparent 2px,
+        transparent 4px
+      );
+      z-index: 10;
+      pointer-events: none;
+    }
+    .glitch {
+      animation: glitch 1s infinite;
+    }
+    @keyframes glitch {
+      0% { transform: translate(0); }
+      20% { transform: translate(-2px, 2px); }
+      40% { transform: translate(2px, -1px); }
+      60% { transform: translate(-1px, -2px); }
+      80% { transform: translate(1px, 2px); }
+      100% { transform: translate(0); }
+    }
+    .typewriter {
+      overflow: hidden;
+      white-space: nowrap;
+      border-right: 0.15em solid #00ff99;
+      animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end infinite;
+    }
+    @keyframes typing {
+      from { width: 0 }
+      to { width: 100% }
+    }
+    @keyframes blink-caret {
+      from, to { border-color: transparent }
+      50% { border-color: #00ff99 }
+    }
+  </style>
+</head><body class="crt">
+  <canvas id="matrixCanvas" class="matrix"></canvas>  <div class="flex flex-col items-center justify-center h-screen text-center">
+    <img src="https://avatars.githubusercontent.com/u/111750161?v=4" alt="Profile" class="rounded-full w-40 h-40 shadow-lg transform hover:scale-110 transition duration-500 glitch"><h1 class="text-4xl md:text-6xl mt-6 glitch">4xSUKOON</h1>
+<p class="text-lg md:text-xl mt-4 text-green-400 typewriter">Access Granted: Identity Interface Online</p>
+
+<div id="socialLinks" class="mt-10 flex space-x-6"></div>
+
+  </div><audio id="glitchAudio" src="https://assets.mixkit.co/active_storage/sfx/2625/2625-preview.mp3" preload="auto"></audio>
+
+  <script>
+    // Matrix Effect
+    const canvas = document.getElementById('matrixCanvas');
+    const ctx = canvas.getContext('2d');
+
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+
+    let chars = "01";
+    chars = chars.split("");
+
+    let fontSize = 14;
+    let columns = canvas.width / fontSize;
+    let drops = Array(Math.floor(columns)).fill(1);
+
+    function draw() {
+      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "#0F0";
+      ctx.font = fontSize + "px monospace";
+
+      for (let i = 0; i < drops.length; i++) {
+        const text = chars[Math.floor(Math.random() * chars.length)];
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
         }
 
-        body::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background-image: linear-gradient(to right, rgba(255,255,255,0.03) 1px, transparent 1px),
-                              linear-gradient(to bottom, rgba(255,255,255,0.03) 1px, transparent 1px);
-            background-size: 20px 20px;
-            z-index: -1;
-        }
+        drops[i]++;
+      }
+    }
 
-        .glitch-text {
-            position: relative;
-            animation: glitch 1s infinite;
-            text-shadow:
-                2px 2px 0 #0ff,
-                -2px -2px 0 #f0f;
-        }
+    setInterval(draw, 33);
 
-        @keyframes glitch {
-            0% { transform: translate(0); }
-            20% { transform: translate(-2px, 2px); }
-            40% { transform: translate(-2px, -2px); }
-            60% { transform: translate(2px, 2px); }
-            80% { transform: translate(2px, -2px); }
-            100% { transform: translate(0); }
-        }
+    // Audio Trigger on Load
+    window.addEventListener("DOMContentLoaded", () => {
+      const audio = document.getElementById("glitchAudio");
+      audio.play().catch(() => {});
+    });
 
-        #loader {
-            font-family: 'Share Tech Mono', monospace;
-        }
-    </style>
-</head>
-<body class="flex items-center justify-center min-h-screen p-6 relative">
-    <!-- Loader -->
-    <div class="fixed inset-0 bg-black flex items-center justify-center text-green-400 text-xl z-50" id="loader">
-        <span id="typewriter">initializing...</span>
-    </div>
+    // Social Profiles (customize this part)
+    const profiles = {
+      instagram: "https://www.instagram.com/4xsukoon"
+    };
 
-    <main class="bg-black bg-opacity-30 border border-green-400 p-8 rounded-xl shadow-lg w-full max-w-md text-center relative z-10">
-        <div class="mb-6">
-            <img src="https://raw.githubusercontent.com/RARExSIGMA2025/Insta/main/pfp.jpg" 
-                 alt="Profile" 
-                 class="w-32 h-32 mx-auto rounded-full border-4 border-green-400 mb-4">
-            <h1 class="text-3xl glitch-text">0xAyu</h1>
-            <p class="text-sm mt-2">Ethical Hacker | Digital Nomad | Cyber Explorer</p>
-        </div>
+    const socialIcons = {
+      instagram: "📷",
+      github: "💻",
+      linkedin: "🔗",
+      resume: "📄",
+      projects: "📁"
+    };
 
-        <div class="text-left bg-green-800 bg-opacity-10 p-4 rounded mb-6 text-sm">
-            <p>$ whoami</p>
-            <p class="ml-4">Ayu - seeker of bugs, protector of bytes.</p>
-            <p class="mt-2">$ mission</p>
-            <p class="ml-4">Defend the web. Build ethical code. Disappear in the shadows.</p>
-        </div>
-
-        <div class="space-y-4">
-            <a href="https://www.instagram.com/4xsukoon?igsh=bnFqejg2MnhlMmUx" target="_blank"
-               class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
-                📷 Instagram
-            </a>
-            <a href="#" class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
-                💻 GitHub
-            </a>
-            <a href="#" class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
-                👨‍💻 Projects
-            </a>
-            <a href="#" class="block w-full py-3 px-4 border border-green-400 text-green-300 hover:bg-green-800 hover:bg-opacity-20 rounded transition-all">
-                📄 Resume
-            </a>
-        </div>
-
-        <footer class="mt-6 text-xs text-green-600">
-            <p>Last Access: <span id="lastAccess"></span></p>
-            <p>&copy; 2025 0xAyu. All rights reserved.</p>
-        </footer>
-    </main>
-
-    <script>
-        const loader = document.getElementById("loader");
-        const text = ">> Welcome, 0xAyu_Initializing Portfolio...";
-        let i = 0;
-        const typewriter = document.getElementById("typewriter");
-
-        function type() {
-            if (i < text.length) {
-                typewriter.innerHTML += text.charAt(i);
-                i++;
-                setTimeout(type, 50);
-            } else {
-                setTimeout(() => loader.style.display = "none", 1000);
-            }
-        }
-        window.onload = type;
-
-        document.getElementById("lastAccess").innerText = new Date().toLocaleString();
-    </script>
-</body>
+    const socialLinks = document.getElementById("socialLinks");
+    Object.entries(profiles).forEach(([key, url]) => {
+      if (url) {
+        const a = document.createElement("a");
+        a.href = url;
+        a.target = "_blank";
+        a.textContent = socialIcons[key] + " " + key.toUpperCase();
+        a.className = "text-green-400 hover:text-white transform hover:scale-105 transition text-lg font-mono";
+        socialLinks.appendChild(a);
+      }
+    });
+  </script></body>
 </html>
