--- a/index.html
+++ b/index.html
@@ -3,196 +3,149 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>4xSUKOON</title>
+  <title>4xSUKOON - Interface Online</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet"/>
+  <!-- New font imports for a modern, tech-inspired look -->
+  <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
   <style>
+    /* Base Styles: Dark gradient background, modern fonts, crisp colors */
     body {
       margin: 0;
-      font-family: 'Share Tech Mono', monospace;
-      background: black;
-      color: #00ff99;
-      overflow: hidden;
+      font-family: 'Inter', sans-serif; /* Default font for body text */
+      background: linear-gradient(135deg, #1A202C, #2D3748); /* Deep, subtle dark gradient */
+      color: #E2E8F0; /* Soft white for general text */
+      overflow: hidden; /* Prevent scrollbars unless content truly overflows */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh; /* Ensure it takes full viewport height */
     }
 
-    .matrix {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
+    /* Heading specific font */
+    h1 {
+      font-family: 'Oxanium', monospace; /* Techy, modern font for headings */
     }
 
-    canvas {
-      display: block;
+    /* Custom animations for a sleek, futuristic feel */
+    .fade-in-up {
+      animation: fadeInUp 1s ease-out forwards;
+      opacity: 0;
     }
 
-    .crt {
-      position: relative;
-    }
-
-    .crt::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: repeating-linear-gradient(
-        to bottom,
-        rgba(0, 255, 153, 0.05),
-        rgba(0, 255, 153, 0.05) 1px,
-        transparent 2px,
-        transparent 4px
-      );
-      z-index: 10;
-      pointer-events: none;
-    }
-
-    .float-anim {
-      animation: float 3s ease-in-out infinite;
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    .glitch {
-      animation: glitch 1s infinite;
-    }
-
-    @keyframes glitch {
-      0% { transform: translate(0); }
-      20% { transform: translate(-2px, 2px); }
-      40% { transform: translate(2px, -1px); }
-      60% { transform: translate(-1px, -2px); }
-      80% { transform: translate(1px, 2px); }
-      100% { transform: translate(0); }
-    }
-
-    .typewriter {
-      overflow: hidden;
-      white-space: nowrap;
-      border-right: 0.15em solid #00ff99;
-      animation: typing 3.5s steps(30, end), blink-caret 0.75s step-end infinite;
-    }
-
-    @keyframes typing {
-      from { width: 0 }
-      to { width: 100% }
-    }
-
-    @keyframes blink-caret {
-      from, to { border-color: transparent }
-      50% { border-color: #00ff99 }
-    }
-
-    .wave-text span {
-      display: inline-block;
-      animation: wave 1.3s infinite ease-in-out;
-    }
-
-    .wave-text span:nth-child(even) {
-      animation-delay: 0.1s;
-    }
-
-    .wave-text span:nth-child(odd) {
-      animation-delay: 0.2s;
-    }
-
-    @keyframes wave {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
-    }
-
-    .glow {
-      box-shadow: 0 0 10px #00ff99, 0 0 20px #00ff99;
-    }
-  </style>
-</head>
-<body class="crt">
-  <canvas id="matrixCanvas" class="matrix"></canvas>
-
-  <div class="flex flex-col items-center justify-center h-screen text-center px-4">
-    <img src="https://avatars.githubusercontent.com/u/111750161?v=4"
-         alt="4xSUKOON"
-         class="rounded-full w-40 h-40 shadow-lg glow float-anim hover:scale-110 transition duration-500"/>
-
-    <h1 class="text-5xl md:text-6xl mt-6 text-green-400 glitch">4xSUKOON</h1>
-
-    <p class="text-lg md:text-xl mt-4 text-green-300 typewriter">Access Granted: Interface Online</p>
-
-    <div class="mt-4 text-xl wave-text text-green-400">
-      <span>D</span><span>E</span><span>C</span><span>O</span><span>D</span><span>I</span><span>N</span><span>G</span>
-      <span>&nbsp;</span>
-      <span>S</span><span>I</span><span>L</span><span>E</span><span>N</span><span>C</span><span>E</span>
-    </div>
-
-    <div id="socialLinks" class="mt-10 flex space-x-6"></div>
-  </div>
-
-  <audio id="glitchAudio" src="https://assets.mixkit.co/active_storage/sfx/2625/2625-preview.mp3" preload="auto"></audio>
-
-  <script>
-    // Matrix Rain
-    const canvas = document.getElementById('matrixCanvas');
-    const ctx = canvas.getContext('2d');
-
-    canvas.height = window.innerHeight;
-    canvas.width = window.innerWidth;
-
-    const chars = "01".split("");
-    const fontSize = 14;
-    const columns = canvas.width / fontSize;
-    const drops = Array(Math.floor(columns)).fill(1);
-
-    function drawMatrix() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#0F0";
-      ctx.font = fontSize + "px monospace";
-
-      for (let i = 0; i < drops.length; i++) {
-        const text = chars[Math.floor(Math.random() * chars.length)];
-        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-          drops[i] = 0;
-        }
-        drops[i]++;
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
       }
     }
 
-    setInterval(drawMatrix, 33);
+    .pulse-glow {
+      animation: pulseGlow 2s infinite alternate ease-in-out;
+    }
 
-    // Play glitch audio on load
-    window.addEventListener("DOMContentLoaded", () => {
-      const audio = document.getElementById("glitchAudio");
-      audio.play().catch(() => {});
-    });
+    @keyframes pulseGlow {
+      0% {
+        box-shadow: 0 0 10px rgba(0, 204, 255, 0.4), 0 0 20px rgba(0, 204, 255, 0.2);
+      }
+      100% {
+        box-shadow: 0 0 15px rgba(0, 204, 255, 0.6), 0 0 30px rgba(0, 204, 255, 0.3);
+      }
+    }
 
-    // Dynamic Social Links (only shown when added)
+    .subtle-float {
+      animation: subtleFloat 4s ease-in-out infinite;
+    }
+
+    @keyframes subtleFloat {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
+
+    /* Delay for staggered animations */
+    .delay-100 { animation-delay: 0.1s; }
+    .delay-200 { animation-delay: 0.2s; }
+    .delay-300 { animation-delay: 0.3s; }
+    .delay-400 { animation-delay: 0.4s; }
+    .delay-500 { animation-delay: 0.5s; }
+    .delay-600 { animation-delay: 0.6s; }
+  </style>
+</head>
+<body class="flex flex-col items-center justify-center min-h-screen p-4">
+
+  <div class="flex flex-col items-center text-center max-w-lg mx-auto">
+    <!-- Profile Image with subtle glow and float animation -->
+    <img src="https://avatars.githubusercontent.com/u/111750161?v=4"
+         alt="4xSUKOON"
+         class="rounded-full w-32 h-32 md:w-40 md:h-40 object-cover shadow-lg pulse-glow subtle-float
+                hover:scale-105 transition duration-300 ease-in-out fade-in-up"/>
+
+    <!-- Main Heading with futuristic styling -->
+    <h1 class="text-4xl md:text-5xl lg:text-6xl mt-6 font-bold text-blue-400 fade-in-up delay-100">
+      4xSUKOON
+    </h1>
+
+    <!-- Subheading with a clean, informative tone -->
+    <p class="text-lg md:text-xl mt-4 text-gray-300 fade-in-up delay-200">
+      Interface Online: System Operational
+    </p>
+
+    <!-- Tagline with a modern, slightly abstract feel -->
+    <div class="mt-4 text-xl md:text-2xl text-blue-300 fade-in-up delay-300">
+      <span class="font-medium">DECODING</span> <span class="font-light">SILENCE</span>
+    </div>
+
+    <!-- Dynamic Social Links Section -->
+    <div id="socialLinks" class="mt-10 flex flex-wrap justify-center space-x-4 md:space-x-6 fade-in-up delay-400">
+      <!-- Social links will be injected here by JavaScript -->
+    </div>
+
+    <!-- Footer for copyright/attribution -->
+    <footer class="mt-16 text-sm text-gray-500 fade-in-up delay-500">
+      &copy; 2024 4xSUKOON. All systems nominal.
+    </footer>
+  </div>
+
+  <script>
+    // Dynamic Social Links Generation
     const profiles = {
       instagram: "https://www.instagram.com/4xsukoon",
-      // github: "",
-      // telegram: "",
+      github: "https://github.com/your-github", // Placeholder: Add actual GitHub link
+      telegram: "https://t.me/your-telegram",   // Placeholder: Add actual Telegram link
+      // Add more profiles as needed
+      // website: "https://www.yourwebsite.com",
+      // linkedin: "https://www.linkedin.com/in/yourprofile",
     };
 
-    const icons = {
-      instagram: "📷",
-      github: "💻",
-      telegram: "✈️",
+    // Simple text labels for social links. For icons, a library like Lucide or Font Awesome would be integrated.
+    const linkLabels = {
+      instagram: "Instagram",
+      github: "GitHub",
+      telegram: "Telegram",
+      website: "Website",
+      linkedin: "LinkedIn",
     };
 
     const container = document.getElementById("socialLinks");
+    let delay = 0; // For staggered animation of links
+
     for (const [name, url] of Object.entries(profiles)) {
       if (url) {
         const a = document.createElement("a");
         a.href = url;
         a.target = "_blank";
-        a.textContent = icons[name] + " " + name.toUpperCase();
-        a.className = "text-green-400 hover:text-white transform hover:scale-110 transition text-lg font-mono";
+        a.textContent = linkLabels[name] || name.charAt(0).toUpperCase() + name.slice(1); // Fallback to capitalized name
+        a.className = `text-blue-300 hover:text-white transform hover:scale-110 transition duration-300 ease-in-out
+                       px-4 py-2 rounded-lg border border-blue-400 hover:border-white text-base md:text-lg
+                       fade-in-up delay-${500 + delay}`; // Stagger animation
         container.appendChild(a);
+        delay += 100; // Increment delay for next link
       }
     }
   </script>
 </body>
 </html>
+
