--- a/index.html
+++ b/index.html
@@ -3,150 +3,127 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>4xSUKOON - Interface Online</title>
-  
-  <!-- TailwindCSS -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
-
-  <!-- Metadata for SEO & Social Preview -->
-  <meta property="og:title" content="4xSUKOON - Interface Online" />
-  <meta property="og:description" content="Techno-hacker aesthetic. Interface online. Decoding Silence." />
-  <meta property="og:image" content="https://avatars.githubusercontent.com/u/111750161?v=4" />
-  <meta name="theme-color" content="#00ccff" />
-
+  <title>4xSukoon</title>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #1A202C, #2D3748);
-      color: #E2E8F0;
-      overflow-x: hidden;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: #0a0a0a;
+      color: #e0e0e0;
+      font-family: 'Courier New', monospace;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
     }
 
-    h1 {
-      font-family: 'Oxanium', monospace;
+    .container {
+      max-width: 600px;
     }
 
-    .fade-in-up {
-      animation: fadeInUp 1s ease-out forwards;
-      opacity: 0;
+    .glow {
+      font-size: 3rem;
+      color: #00ffe0;
+      text-shadow: 0 0 10px #00ffe0, 0 0 20px #00ffe0, 0 0 30px #00ffe0;
+      margin-bottom: 30px;
     }
 
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
+    .typewriter {
+      font-size: 1.2rem;
+      color: #ccc;
+      min-height: 80px;
+      margin-bottom: 40px;
+    }
+
+    .insta-link {
+      display: inline-flex;
+      align-items: center;
+      text-decoration: none;
+      color: #f5f5f5;
+      border: 2px solid #00ffe0;
+      padding: 10px 20px;
+      border-radius: 10px;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .insta-link:hover {
+      background-color: #00ffe0;
+      color: #000;
+    }
+
+    .insta-link img {
+      width: 24px;
+      height: 24px;
+      margin-right: 10px;
+    }
+
+    @media (max-width: 600px) {
+      .glow {
+        font-size: 2.2rem;
       }
-      to {
-        opacity: 1;
-        transform: translateY(0);
+      .typewriter {
+        font-size: 1rem;
       }
     }
-
-    .pulse-glow {
-      animation: pulseGlow 2s infinite alternate ease-in-out;
-    }
-
-    @keyframes pulseGlow {
-      0% {
-        box-shadow: 0 0 10px rgba(0, 204, 255, 0.4), 0 0 20px rgba(0, 204, 255, 0.2);
-      }
-      100% {
-        box-shadow: 0 0 15px rgba(0, 204, 255, 0.6), 0 0 30px rgba(0, 204, 255, 0.3);
-      }
-    }
-
-    .subtle-float {
-      animation: subtleFloat 4s ease-in-out infinite;
-    }
-
-    @keyframes subtleFloat {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
-    }
-
-    /* Animation delays for staggered elements */
-    .delay-100 { animation-delay: 0.1s; }
-    .delay-200 { animation-delay: 0.2s; }
-    .delay-300 { animation-delay: 0.3s; }
-    .delay-400 { animation-delay: 0.4s; }
-    .delay-500 { animation-delay: 0.5s; }
   </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen p-4">
-
-  <div class="flex flex-col items-center text-center max-w-lg w-full mx-auto px-4 sm:px-6">
-    
-    <!-- Profile Image -->
-    <img src="https://avatars.githubusercontent.com/u/111750161?v=4"
-         alt="4xSUKOON"
-         class="rounded-full w-32 h-32 md:w-40 md:h-40 object-cover shadow-lg pulse-glow subtle-float
-                hover:scale-105 transition duration-300 ease-in-out fade-in-up"/>
-
-    <!-- Heading -->
-    <h1 class="text-4xl md:text-5xl lg:text-6xl mt-6 font-bold text-blue-400 fade-in-up delay-100">
-      4xSUKOON
-    </h1>
-
-    <!-- Status Text -->
-    <p class="text-lg md:text-xl mt-4 text-gray-300 fade-in-up delay-200">
-      Interface Online: System Operational
-    </p>
-
-    <!-- Tagline -->
-    <div class="mt-4 text-xl md:text-2xl text-blue-300 fade-in-up delay-300">
-      <span class="font-medium">DECODING</span> <span class="font-light">SILENCE</span>
-    </div>
-
-    <!-- Social Links -->
-    <div id="socialLinks" class="mt-10 flex flex-wrap justify-center space-x-4 md:space-x-6 fade-in-up delay-400">
-      <!-- Links will be inserted here -->
-    </div>
-
-    <!-- Footer -->
-    <footer class="mt-16 text-sm text-gray-500 fade-in-up delay-500">
-      &copy; 2024 4xSUKOON. All systems nominal.
-    </footer>
+<body>
+  <div class="container">
+    <h1 class="glow">4xSukoon</h1>
+    <p class="typewriter" id="quote"></p>
+    <a href="https://www.instagram.com/4xsukoon" target="_blank" class="insta-link">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" />
+      <span>@4xSukoon</span>
+    </a>
   </div>
 
   <script>
-    const profiles = {
-      instagram: "https://www.instagram.com/4xsukoon"
-      // github: "https://github.com/your-github",
-      // telegram: "https://t.me/your-telegram",
-    };
+    const quotes = [
+      "Ghosted the world. Upgraded my soul.",
+      "I log in silently, I leave a legacy loudly.",
+      "Life of a hacker. Peace in chaos. Code in silence.",
+      "No face, no case. Just @4xSukoon.",
+      "Privacy is power. Identity is a myth.",
+      "Sukoon isn’t luxury — it’s my weapon.",
+      "Legends don’t speak. They deploy.",
+      "This isn’t just a vibe. It’s a version update."
+    ];
 
-    const linkLabels = {
-      instagram: "Instagram",
-      github: "GitHub",
-      telegram: "Telegram",
-      website: "Website",
-      linkedin: "LinkedIn",
-    };
+    let index = 0;
+    let charIndex = 0;
+    let currentQuote = '';
+    let isDeleting = false;
 
-    const container = document.getElementById("socialLinks");
-    let delay = 0;
+    function type() {
+      const quoteEl = document.getElementById('quote');
 
-    for (const [name, url] of Object.entries(profiles)) {
-      if (url) {
-        const a = document.createElement("a");
-        a.href = url;
-        a.target = "_blank";
-        a.textContent = linkLabels[name] || name.charAt(0).toUpperCase() + name.slice(1);
-        a.className = `text-blue-300 hover:text-white transform hover:scale-110 transition duration-300 ease-in-out
-                       px-4 py-2 rounded-lg border border-blue-400 hover:border-white text-base md:text-lg
-                       fade-in-up delay-${500 + delay}`;
-        container.appendChild(a);
-        delay += 100;
+      if (index >= quotes.length) index = 0;
+      currentQuote = quotes[index];
+
+      if (!isDeleting) {
+        quoteEl.textContent = currentQuote.substring(0, charIndex++);
+        if (charIndex > currentQuote.length) {
+          isDeleting = true;
+          setTimeout(type, 2500);
+          return;
+        }
+      } else {
+        quoteEl.textContent = currentQuote.substring(0, charIndex--);
+        if (charIndex < 0) {
+          isDeleting = false;
+          index++;
+        }
       }
+      setTimeout(type, isDeleting ? 30 : 70);
     }
+
+    document.addEventListener('DOMContentLoaded', type);
   </script>
 </body>
 </html>
